# fullon_strategies

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATABASE_PATTERNS.md  FEED_MAPPING.md  README.md  STRATEGY_LIFECYCLE.md  pyproject.toml  pytest.ini  strategy_insights.md
docs/: FULLON_OHLCV_METHOD_REFERENCE.md  FULLON_ORM_LLM_METHOD_REFERENCE.md  TESTING_KNOWN_ISSUES.md
examples/: example_strategy.py
src/fullon_strategies/: __init__.py  base_strategy.py  strategy_loader.py
src/fullon_strategies/utils/: __init__.py  feed_loader.py
tests/: .env.test  conftest.py  test_factories.py  test_feed_loader_ohlcv.py  test_fixtures.py  test_infrastructure.py
tests/factories/: __init__.py  base.py  exchange.py  feed.py  strategy.py  symbol.py
tests/fixtures/: ohlcv_data.py  tick_data.py
